@@ -119,7 +119,6 @@ function ossn_post_comments_delete($event, $type, $params) {
  * @access private
  */
 function ossn_comment_menu($name, $type, $params) {
-    ossn_unregister_menu('delete', 'comments');
 
     $OssnComment = new OssnComments;
     if (is_object($params)) {
@@ -138,10 +137,13 @@ function ossn_comment_menu($name, $type, $params) {
 			//group admins must be able to delete ANY comment in their own group #170
 			//just show menu if group owner is loggedin 
             if ((ossn_loggedin_user()->guid == $post->owner_guid) || (ossn_loggedin_user()->guid == $group->owner_guid)) {
-                ossn_register_menu_link('delete', ossn_print('comment:delete'), array(
+                ossn_unregister_menu('delete', 'comments');
+				ossn_register_menu_item('comments', array(
+					'name' => 'delete',
                     'href' => ossn_site_url("action/delete/comment?comment={$params['id']}", true),
                     'class' => 'ossn-delete-comment',
-                ), 'comments');
+					'text' => ossn_print('comment:delete'),
+                ));
             }
         }
     }
@@ -152,11 +154,13 @@ function ossn_comment_menu($name, $type, $params) {
 	  }
       if (($user->guid == $params['owner_guid']) || ossn_isAdminLoggedin() 
 		|| ($comment->type == 'comments:entity' && $entity->type = 'user' && $user->guid == $entity->owner_guid)) {
-         
-		 ossn_register_menu_link('delete', ossn_print('comment:delete'), array(
+         ossn_unregister_menu('delete', 'comments');
+		 ossn_register_menu_item('comments', array(
+			  'name' => 'delete',
               'href' => ossn_site_url("action/delete/comment?comment={$params['id']}", true),
               'class' => 'ossn-delete-comment',
-          ), 'comments');
+			  'text' => ossn_print('comment:delete'),
+          ));
       
 	  }
 	}
